--- a/docs/SCMA470Bookdownproj.tex
+++ b/docs/SCMA470Bookdownproj.tex
@@ -128,7 +128,7 @@
 
 \title{\textbf{SCMA 470 : Risk Analysis and Credibility} \textbf{Tutorial 3}}
 \author{Pairote Satiracoo}
-\date{2021-10-11}
+\date{2021-10-12}
 
 \usepackage{amsthm}
 \newtheorem{theorem}{Theorem}[chapter]
@@ -3053,6 +3053,65 @@ parameters \(\lambda = 10\) and the claim sizes have a Pareto distribution
 \item
   Repeat the same question as above assumed that the SVP is applied.
 \end{enumerate}
+
+\textbf{Solution:}
+
+The loss distribution has Pareto distribution \(X \sim Pa(4,3)\). Therefore, \(\mathrm{E}[X] = 1\) and \(\mathrm{E}[X^2] = 3\).
+
+The mean and variance of the aggregate claim amounts are \(\mathrm{E}[S] = \lambda \mathrm{E}[X] = 10\)
+and \(\mathrm{Var}[S] = \lambda \mathrm{E}[X^2] = 30\).
+
+\begin{enumerate}
+\def\labelenumi{\arabic{enumi}.}
+\tightlist
+\item
+  Use the normal approximation \(S \sim \mathcal{N}(10, 30)\).
+  Let \(P\) denote the premium charged. We need to find the security loading \(\theta\) such that
+  \[\Pr( P - S > 0) = 0.95.\]
+  Assume that the premium charged to cover the risk follows the expected value principle (EVP). So we set
+  \[P = E[S] + \theta\, E[S] = ( 1 + \theta)E[S] = ( 1 + \theta)(10).\]
+  \begin{align}
+  0.95 &= \Pr( P - S > 0)  \\
+  &= \Pr( ( 1 + \theta)(10) - S > 0)  \\
+  &= \Pr( S < ( 1 + \theta)(10) ) \\
+  &= \Pr( Z < \frac{( 1 + \theta)(10) - 10 }{\sqrt{30}} ) \\
+  &= \Pr( Z < \frac{( \theta)(10) }{\sqrt{30}} ).
+  \end{align}
+  This gives \(\frac{( \theta)(10) }{\sqrt{30}} = 1.6448536\) and
+  \[\theta = 0.9009234, \quad  P = 19.009.\]
+  Instead of using the normal approximation to aggregate claims \(S\), we now assume that \(S\) is approximated by \(Y + k\) where
+  \(Y \sim \mathcal{G}(1.4814815, 0.2222222)\) and \(k = 3.3333333\) is a constant. It follows that
+  \begin{align}
+  0.95 &= \Pr( P - S > 0)  \\
+  &= \Pr( ( 1 + \theta)(10) - S > 0)  \\
+  &= \Pr( S < ( 1 + \theta)(10) ) \\
+  &= \Pr( Y < ( 1 + \theta)(10) - 3.3333333 ) \\
+  \end{align}
+\end{enumerate}
+
+Therefore, \((1 + \theta)\)(10) - 3.3333333 = qgamma(0.95,shape = 1.481481, rate = 0.222222) = 17.43845, which results in
+\[\theta = 1.0771784, \quad  P = 20.772.\]
+
+\begin{enumerate}
+\def\labelenumi{\arabic{enumi}.}
+\setcounter{enumi}{1}
+\tightlist
+\item
+  Using the standard deviation principle (SVP), we set
+  \[P = E[S] + \theta\, \text{SD}[S] = 10 + \theta \cdot sqrt{30}\]
+  For the normal approximation of the aggregate claims, we obtain
+  \begin{align}
+  0.95 &= \Pr( P - S > 0)  \\
+  &= \Pr( 10 + \theta \cdot sqrt{30} - S > 0)  \\
+  &= \Pr( S < 10 + \theta \cdot sqrt{30} ) \\
+  &= \Pr( Z < \frac{10 + \theta \cdot sqrt{30} - 10 }{\sqrt{30}} ) \\
+  &= \Pr( Z < \theta).
+  \end{align}
+\end{enumerate}
+
+Hence, \(\theta = 1.644854\) and \(P = 19.009\).
+
+\textbf{Comment} The loading factors (for normal approximation) in both two cases are different because they are applied to different quantities (i.e.~\(\mathrm{E}[S]\) and \(\mathrm{Var}[S]\)). But they give the same premium.
 
 \hypertarget{ruin-theory}{%
 \chapter{Ruin Theory}\label{ruin-theory}}
